testsuite/negative/inference.n
module M {
  foo (x : list [_]) : void // E: type inference not allowed here
  {
  }

  Main () : void
  {
  }
}
